# Orvex

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: windows-release.yml
src/: App.tsx  RootApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  storage.rs
src/components/: WindowFrame.tsx
src/hooks/: useLauncherState.ts  useWindowFrame.ts
src/lib/: tauri.ts
src/panel/: LauncherPanel.tsx
src/settings/: SettingsWindow.tsx
src/tools/: PickerWindow.tsx  TodoWindow.tsx
src/types/: launcher.ts
文档/: Orvex_PRD_v1.0.md
