[package]
name = "orvex"
version = "0.1.0"
description = "Orvex desktop quick launcher"
authors = ["OpenAI Codex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "orvex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tauri-plugin-dialog = "2"
